jit: port disk compiler advisor